Update placeholder content; add PDF assets

--- a/about.html
+++ b/about.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <title>About | New Zealand Procurement Guidance Archive</title>
+    <title>About | New Zealand Public Sector Procurement Repository</title>
     <meta name="description"
         content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
-    <meta property="og:title" content="New Zealand Procurement Guidance Archive">
+    <meta property="og:title" content="New Zealand Public Sector Procurement Repository">
     <meta property="og:description"
         content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
     <meta property="og:image"
@@ -48,7 +48,7 @@
                     <div class="logo-icon">
                         <img src="assets/logo.svg" alt="">
                     </div>
-                    <h1>New Zealand Procurement Guidance</h1>
+                    <h1>New Zealand Public Sector Procurement Repository</h1>
                 </div>
             </a>
             <nav>
@@ -73,10 +73,12 @@
         <section>
             <h2>
                 <img src="assets/icon-info.svg" alt="" width="20" height="20">
-                About This Archive
+                About This Repository
             </h2>
-            <p>This site preserves historical versions of New Zealand government procurement guidance documents that are no longer available through official channels. These archived materials serve as a resource for researchers, academics, and procurement professionals requiring access to previous versions of procurement frameworks.</p>
-            <p>Current versions of all documents link directly to their authoritative sources on government websites. Historical versions are provided as downloadable PDF files.</p>
+            <p>This repository came about while looking for previous versions of the Government Procurement Rules. I realised that many of the links to previous versions of the Rules were invalid or the various sites had been updated and no longer published these documents.</p>
+            <p>This site preserves historical versions of New Zealand Government Procurement Rules that are no longer published through official channels. These archived materials serve as a resource for researchers, academics, and procurement professionals requiring access to previous versions of the procurement rules.</p>
+            <p>Further to the various Government Procurement Rules this site is also aiming to be a repository of all the various Good Practice guidance that has been published over the years relating to New Zealand Public Sector procurement.</p>
+            <p>Current versions of all documents link directly to their authoritative source. Historical versions are provided as downloadable PDF files.</p>
         </section>
 
     </main>
@@ -84,7 +86,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="copyright">
-            © <span id="current-year"></span> New Zealand Procurement Guidance Repository. For research and archival purposes.
+            © <span id="current-year"></span> New Zealand Public Sector Procurement Repository. For research and archival purposes.
         </div>
     </footer>
 
