--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <title>Contact | New Zealand Procurement Guidance Archive</title>
+    <title>Contact | New Zealand Public Sector Procurement Repository</title>
     <meta name="description"
         content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
-    <meta property="og:title" content="New Zealand Procurement Guidance Archive">
+    <meta property="og:title" content="New Zealand Public Sector Procurement Repository">
     <meta property="og:description"
         content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
     <meta property="og:image"
@@ -48,7 +48,7 @@
                     <div class="logo-icon">
                         <img src="assets/logo.svg" alt="">
                     </div>
-                    <h1>New Zealand Procurement Guidance</h1>
+                    <h1>New Zealand Public Sector Procurement Repository</h1>
                 </div>
             </a>
             <nav>
@@ -75,8 +75,8 @@
                 <img src="assets/icon-email.svg" alt="" width="20" height="20">
                 Contact
             </h2>
-            <p>For inquiries about archived documents, corrections, or suggestions for additional materials to include in this repository, please contact:</p>
-            <a class="email-link" href="mailto:procurement.archive@example.govt.nz">procurement.archive@example.govt.nz</a>
+            <p>For inquiries about archived documents, corrections, or suggestions for additional material to be included in this repository, please contact the site maintainer:</p>
+            <a class="email-link" href="mailto:sheath@foxbane.co.nz">Steven Heath - Foxbane Consulting Ltd</a>
         </section>
 
     </main>
@@ -84,7 +84,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="copyright">
-            © <span id="current-year"></span> New Zealand Procurement Guidance Repository. For research and archival purposes.
+            © <span id="current-year"></span> Foxbane Consulting Ltd. The New Zealand Public Sector Procurement Repository is for research and archival purposes only.
         </div>
     </footer>
 
