--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <title>New Zealand Procurement Guidance Archive</title>
+    <title>New Zealand Public Sector Procurement Repository</title>
     <meta name="description"
         content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
-    <meta property="og:title" content="New Zealand Procurement Guidance Archive">
+    <meta property="og:title" content="New Zealand Public Sector Procurement Repository">
     <meta property="og:description"
         content="Archive of historical New Zealand government procurement guidance documents and rules for research and archival purposes.">
     <meta property="og:image"
@@ -48,7 +48,7 @@
                     <div class="logo-icon">
                         <img src="assets/logo.svg" alt="">
                     </div>
-                    <h1>New Zealand Procurement Guidance</h1>
+                    <h1>New Zealand Public Sector Procurement Repository</h1>
                 </div>
             </a>
             <nav>
@@ -81,8 +81,9 @@
                 <ul class="document-list">
                     <li>
                         <a href="https://www.procurement.govt.nz/government-procurement-framework/government-procurement-rules/"
-                            class="document-link" target="_blank">Government Procurement Rules 5th edition</a>
-                        <p class="description">Placeholder</p>
+                            class="document-link" target="_blank">
+                            Government Procurement Rules 5th edition</a>
+                        <p class="description">Effective 1 December 2025</p>
                     </li>
                 </ul>
             </div>
@@ -94,29 +95,34 @@
                 </span>
                 <ul class="document-list">
                     <li>
-                        <a href="Government Procurement Rules 4th edition.pdf"
-                            class="document-link" target="_blank">Government Procurement Rules 4th edition</a>
-                        <p class="description">Placeholder</p>
+                        <a href="PDFs/Government%20Procurement%20Rules%204th%20edition.pdf"
+                            class="document-link" target="_blank" rel="noopener">
+                            Government Procurement Rules 4th edition</a>
+                        <p class="description">In effect 1 October 2019 to 30 November 2025</p>
                     </li>
                     <li>
-                        <a href="Government Rules of Sourcing 3rd edition.pdf"
-                            class="document-link" target="_blank">Government Rules of Sourcing 3rd edition</a>
-                        <p class="description">Placeholder</p>
+                        <a href="PDFs/Government%20Rules%20of%20Sourcing%203rd%20edition.pdf"
+                            class="document-link" target="_blank" rel="noopener">
+                            Government Rules of Sourcing 3rd edition</a>
+                        <p class="description">In effect 1 July 2015 to 30 September 2019</p>
                     </li>
                     <li>
-                        <a href="Government Rules of Sourcing 2nd edition.pdf"
-                            class="document-link" target="_blank">Government Rules of Sourcing 2nd edition</a>
-                        <p class="description">Placeholder</p>
+                        <a href="PDFs/Government%20Rules%20of%20Sourcing%202nd%20edition.pdf"
+                            class="document-link" target="_blank" rel="noopener">
+                            Government Rules of Sourcing 2nd edition</a>
+                        <p class="description">In effect 26 May 2014 to 30 June 2015</p>
                     </li>
                     <li>
-                        <a href="Government Rules of Sourcing.pdf"
-                            class="document-link" target="_blank">Government Rules of Sourcing</a>
-                        <p class="description">Placeholder</p>
+                        <a href="PDFs/Government%20Rules%20of%20Sourcing.pdf"
+                            class="document-link" target="_blank" rel="noopener">
+                            Government Rules of Sourcing</a>
+                        <p class="description">In effect 1 October 2013 to 25 May 2014</p>
                     </li>
                     <li>
-                        <a href="Mandatory Rules for Procurement by Departments.pdf"
-                            class="document-link" target="_blank">Mandatory Rules for Procurement by Departments</a>
-                        <p class="description">Placeholder</p>
+                        <a href="PDFs/Mandatory%20Rules%20for%20Procurement%20by%20Departments.pdf"
+                            class="document-link" target="_blank" rel="noopener">
+                            Mandatory Rules for Procurement by Departments</a>
+                        <p class="description">In effect 18 April 2006 to 30 September 2013</p>
                     </li>
                 </ul>
             </div>
@@ -133,44 +139,50 @@
                 <ul class="document-list">
                     <li>
                         <a href="https://oag.parliament.nz/2008/procurement-guide"
-                            class="document-link" target="_blank">Auditor-General Good Practice Guide - Procurement guidance for public entities</a>
-                        <p class="description">Placeholder</p>
+                            class="document-link" target="_blank" rel="noopener">
+                            Auditor-General Good Practice Guide - Procurement guidance for public entities</a>
+                        <p class="description">June 2008</p>
                     </li>
                     <li>
                         <a href="https://oag.parliament.nz/2008/funding-arrangements"
-                            class="document-link" target="_blank">Auditor-General Good Practice Guide - Public sector purchases, grants, and gifts: Managing funding arrangements with external parties</a>
-                        <p class="description">Placeholder</p>
+                            class="document-link" target="_blank" rel="noopener">
+                            Auditor-General Good Practice Guide - Public sector purchases, grants, and gifts: Managing funding arrangements with external parties</a>
+                        <p class="description">June 2008</p>
                     </li>
                     <li>
                         <a href="https://auditnz.parliament.nz/resources/good-practice/procurement/procurement"
-                            class="document-link" target="_blank">Audit New Zealand - What Good Looks like:
-                            Procurement</a>
-                        <p class="description">Placeholder</p>
+                            class="document-link" target="_blank" rel="noopener">
+                            Audit New Zealand - What Good Looks like: Procurement</a>
+                        <p class="description">June 2021</p>
                     </li>
                     <li>
                         <a href="https://auditnz.parliament.nz/resources/good-practice/procurement/applying-govt-procurement-rules-5ed"
-                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying the Government Procurement Rules - 5th edition</a>
-                        <p class="description">Placeholder</p>
+                            class="document-link" target="_blank" rel="noopener">
+                            Audit New Zealand - What good looks like: Applying the Government Procurement Rules - 5th edition</a>
+                        <p class="description">November 2025</p>
                     </li>
                     <li>
                         <a href="https://auditnz.parliament.nz/resources/good-practice/procurement/economic-benefits"
-                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying economic benefits in procurement</a>
-                        <p class="description">Placeholder</p>
+                            class="document-link" target="_blank" rel="noopener">
+                            Audit New Zealand - What good looks like: Applying economic benefits in procurement</a>
+                        <p class="description">November 2025</p>
                     </li>
                     <li>
                         <a href="https://auditnz.parliament.nz/resources/good-practice/governance/applying-policies-and-guidance"
-                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying policies and guidance</a>
-                        <p class="description">Placeholder</p>
+                            class="document-link" target="_blank" rel="noopener">
+                            Audit New Zealand - What good looks like: Applying policies and guidance</a>
+                        <p class="description">November 2025</p>
                     </li>
                     <li>
                         <a href="https://www.procurement.govt.nz/guides/"
-                            class="document-link" target="_blank">New Zealand Government Procurement Guides</a>
-                        <p class="description">Placeholder</p>
+                            class="document-link" target="_blank" rel="noopener">
+                            New Zealand Government Procurement Guides</a>
                     </li>
                     <li>
                         <a href="https://www.nzta.govt.nz/resources/procurement-manual"
-                            class="document-link" target="_blank">New Zealand Transport Agency - Procurement Manual</a>
-                        <p class="description">Placeholder</p>
+                            class="document-link" target="_blank" rel="noopener">
+                            New Zealand Transport Agency - Procurement Manual</a>
+                        <p class="description">April 2022</p>
                     </li>
                 </ul>
             </div>
@@ -182,19 +194,28 @@
                 </span>
                 <ul class="document-list">
                     <li>
-                        <a href="What good looks like: Applying the Government Procurement Rules - 4th edition.pdf"
-                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying the Government Procurement Rules - 4th edition</a>
-                        <p class="description">Placeholder</p>
+                        <a href="PDFs/GUIDEMasteringProcurement.pdf"
+                            class="document-link" target="_blank" rel="noopener">
+                            Ministry of Economic Development - Mastering procurement A structured approach to strategic procurement</a>
+                        <p class="description">2011</p>
                     </li>
                     <li>
-                        <a href="What good looks like: Applying broader outcomes in procurement.pdf"
-                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying broader outcomes in procurement</a>
-                        <p class="description">Placeholder</p>
+                        <a href="PDFs/What%20good%20looks%20like_%20Applying%20the%20Government%20Procurement%20Rules%20-%204th%20edition.pdf"
+                            class="document-link" target="_blank" rel="noopener">
+                            Audit New Zealand - What good looks like: Applying the Government Procurement Rules - 4th edition</a>
+                        <p class="description">2022</p>
                     </li>
                     <li>
-                        <a href="What good looks like: Applying Progressive procurement.pdf"
-                            class="document-link" target="_blank">Audit New Zealand - What good looks like: Applying Te Kupenga Hao Pāuaua – Progressive procurement</a>
-                        <p class="description">Placeholder</p>
+                        <a href="PDFs/What%20good%20looks%20like_%20Applying%20broader%20outcomes%20in%20procurement.pdf"
+                            class="document-link" target="_blank" rel="noopener">
+                            Audit New Zealand - What good looks like: Applying broader outcomes in procurement</a>
+                        <p class="description">2022</p>
+                    </li>
+                    <li>
+                        <a href="PDFs/What%20good%20looks%20like_%20Applying%20Progressive%20procurement.pdf"
+                            class="document-link" target="_blank" rel="noopener">
+                            Audit New Zealand - What good looks like: Applying Te Kupenga Hao Pāuaua – Progressive procurement</a>
+                        <p class="description">2022</p>
                     </li>
                 </ul>
             </div>
@@ -211,18 +232,21 @@
                 <ul class="document-list">
                     <li>
                         <a href="https://oag.parliament.nz/2020/conflicts"
-                            class="document-link" target="_blank">Auditor-General Good Practice Guide - Managing conflicts of interest: A guide for the public sector</a>
-                        <p class="description">Placeholder</p>
+                            class="document-link" target="_blank" rel="noopener">
+                            Auditor-General Good Practice Guide - Managing conflicts of interest: A guide for the public sector</a>
+                        <p class="description">June 2020</p>
                     </li>
                     <li>
-                        <a href="https://oag.parliament.nz/2020/procurement-conflicts"
-                            class="document-link" target="_blank">Auditor-General Managing conflicts of interest in procurement</a>
-                        <p class="description">Placeholder</p>
+                        <a href="https://oag.parliament.nz/good-practice/conflicts-of-interest/in-procurement"
+                            class="document-link" target="_blank" rel="noopener">
+                            Auditor-General Managing conflicts of interest in procurement</a>
+                        <p class="description">March 2022</p>
                     </li>
                     <li>
                         <a href="https://auditnz.parliament.nz/resources/good-practice/conflicts-of-interest"
-                            class="document-link" target="_blank">Audit New Zealand - What Good Looks like: Managing conflicts of interest</a>
-                        <p class="description">Placeholder</p>
+                            class="document-link" target="_blank" rel="noopener">
+                            Audit New Zealand - What Good Looks like: Managing conflicts of interest</a>
+                        <p class="description">June 2021</p>
                     </li>
                 </ul>
             </div>
@@ -233,7 +257,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="copyright">
-            © <span id="current-year"></span> New Zealand Procurement Guidance Repository. For research and archival purposes.
+            © <span id="current-year"></span> Foxbane Consulting Ltd. The New Zealand Public Sector Procurement Repository is for research and archival purposes only.
         </div>
     </footer>
 
